styles: fixed z-indexes

--- a/src/styles/family_style.css
+++ b/src/styles/family_style.css
@@ -43,6 +43,7 @@ body {
 #right_header {
     padding: 20px;
     border-bottom-right-radius: 40% 80%;
+    z-index: 2;
 }
 
 .column {
@@ -61,6 +62,7 @@ body {
     width: 75%;
     height: 100vh;
     background-color: #ffb3b3;
+    position: relative;
 }
 
 .btn {
